# ngs-variant-classifier

./: .gitignore  Dockerfile  README.md  main.sh  preprocess.py  pyproject.toml  varlociraptor.sh
scenarios/: scenario_ffpe.yaml  scenario_ffpe_no_cont.yaml
tests/: test_ngs.py
tests/data/: setup.sh
tests/output/v1/data/: alignment-properties.json  calls_filt.bcf  calls_filt.tsv  calls_filt.vcf  calls_filt_normal.tsv  candidates.tsv  candidates.vcf  candidates_all.tsv  candidates_all.vcf  candidates_unnormalized.tsv  observations.bcf  observations.bcf.csi
tests/output/v1/results/: varlociraptor_probs.tsv
