[project]
name = "ngs-variant-classifier"
version = "0.1.0"
description = "Pipeline for probabilistic classification of Ion Torrent amplicon variants using Varlociraptor. Estimates probabilities for somatic, germline, artifact, FFPE artifact, or absent calls, adjusting for tumor cell fraction. Outputs TSV tables and AF comparison plots."
authors = [
    {name = "Javier Maroto",email = "javiermarotomorales@gmail.com"}
]
license = {text = "GNU General Public License v3.0"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.extras]
system = ["bcftools", "rust-bio-tools", "varlociraptor"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pandas = "^2.3.3"

